--- a/v1/plugin/nivoslider/css/nivo-slider.css
+++ b/v1/plugin/nivoslider/css/nivo-slider.css
@@ -9,64 +9,64 @@
  
 /* The Nivo Slider styles */
 .nivoSlider {
-	position:relative;
-	width:100%;
-	height:auto;
+	position: relative;
+	width: 100%;
+	height: auto;
 	overflow: hidden;
 }
 .nivoSlider img {
-	position:absolute;
-	top:0px;
-	left:0px;
+	position: absolute;
+	top: 0;
+	left: 0;
 	max-width: none;
 }
 .nivo-main-image {
-	display: block !important;
-	position: relative !important; 
-	width: 100% !important;
+	display: block!important;
+	position: relative!important; 
+	width: 100%!important;
 }
 
 /* If an image is wrapped in a link */
 .nivoSlider a.nivo-imageLink {
-	position:absolute;
-	top:0px;
-	left:0px;
-	width:100%;
-	height:100%;
-	border:0;
-	padding:0;
-	margin:0;
-	z-index:6;
-	display:none;
-	background:white; 
-	filter:alpha(opacity=0); 
-	opacity:0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: 0;
+	padding: 0;
+	margin: 0;
+	z-index: 6;
+	display: none;
+	background: #fff; 
+	filter: alpha(opacity=0); 
+	opacity: 0;
 }
 /* The slices and boxes in the Slider */
 .nivo-slice {
-	display:block;
-	position:absolute;
-	z-index:5;
-	height:100%;
-	top:0;
+	display: block;
+	position: absolute;
+	z-index: 5;
+	height: 100%;
+	top: 0;
 }
 .nivo-box {
-	display:block;
-	position:absolute;
-	z-index:5;
-	overflow:hidden;
+	display: block;
+	position: absolute;
+	z-index: 5;
+	overflow: hidden;
 }
-.nivo-box img { display:block; }
+.nivo-box img {display: block}
 
 /* Caption styles */
 .nivo-caption {
-	position:absolute;
-	left:0px;
-	bottom:0px;
-	background:#000;
-	color:#fff;
-	width:100%;
-	z-index:8;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	background: #000;
+	color: #fff;
+	width: 100%;
+	z-index: 8;
 	padding: 5px 10px;
 	opacity: 0.8;
 	overflow: hidden;
@@ -78,36 +78,36 @@
 	box-sizing: border-box;         /* Opera/IE 8+ */
 }
 .nivo-caption p {
-	padding:5px;
-	margin:0;
+	padding: 5px;
+	margin: 0;
 }
 .nivo-caption a {
-	display:inline !important;
+	display: inline!important;
 }
 .nivo-html-caption {
-    display:none;
+    display: none;
 }
 /* Direction nav styles (e.g. Next & Prev) */
 .nivo-directionNav a {
-	position:absolute;
-	top:42%;
-	z-index:9;
-	cursor:pointer;
+	position: absolute;
+	top: 42%;
+	z-index: 9;
+	cursor: pointer;
 }
 .nivo-prevNav {
-	left:0px;
+	left: 0;
 }
 .nivo-nextNav {
-	right:0px;
+	right: 0;
 }
 /* Control nav styles (e.g. 1,2,3...) */
 .nivo-controlNav {
-	text-align:center;
+	text-align: center;
 	padding: 15px 0;
 }
 .nivo-controlNav a {
-	cursor:pointer;
+	cursor: pointer;
 }
 .nivo-controlNav a.active {
-	font-weight:bold;
+	font-weight: bold;
 }
