--- a/v1/plugin/nivoslider/themes/default/default.css
+++ b/v1/plugin/nivoslider/themes/default/default.css
@@ -1,77 +1,67 @@
-/*
-Skin Name: Nivo Slider Default Theme
-Skin URI: http://nivo.dev7studios.com
-Description: The default skin for the Nivo Slider.
-Version: 1.3
-Author: Gilbert Pellegrom
-Author URI: http://dev7studios.com
-Supports Thumbs: true
-*/
-
 .theme-default .nivoSlider {
-	position:relative;
-	background:#fff url(loading.gif) no-repeat 50% 50%;
-	margin-bottom:10px;
+	position: relative;
+	background: #fff url(loading.gif) no-repeat 50% 50%;
+	margin-bottom: 5px;
 }
 .theme-default .nivoSlider img {
-	position:absolute;
-	top:0px;
-	left:0px;
-	display:none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: none;
 }
 .theme-default .nivoSlider a {
-	border:0;
-	display:block;
+	border: 0;
+	display: block;
 }
 
 .theme-default .nivo-controlNav {
 	text-align: center;
-	padding: 5px 0;
+	padding: 0;
 }
 .theme-default .nivo-controlNav a {
-	display:inline-block;
-	width:22px;
-	height:22px;
-	background:url(bullets.png) no-repeat;
-	text-indent:-9999px;
-	border:0;
+	display: inline-block;
+	width: 22px;
+	height: 22px;
+	background: url(bullets.png) no-repeat;
+	text-indent: -9999px;
+	border: 0;
 	margin: 0 2px;
 }
 .theme-default .nivo-controlNav a.active {
-	background-position:0 -22px;
+	background-position: 0 -22px;
 }
 
 .theme-default .nivo-directionNav a {
-	display:block;
-	width:42px;
-	height:42px;
-	background:url(arrows.png) no-repeat;
-	text-indent:-9999px;
-	border:0;
+	display: block;
+	width: 42px;
+	height: 42px;
+	background: url(arrows.png) no-repeat;
+	text-indent: -9999px;
+	border: 0;
 	opacity: 0;
 	-webkit-transition: all 200ms ease-in-out;
     -moz-transition: all 200ms ease-in-out;
     -o-transition: all 200ms ease-in-out;
     transition: all 200ms ease-in-out;
 }
-.theme-default:hover .nivo-directionNav a { opacity: 1; }
+.theme-default:hover .nivo-directionNav a {opacity: 1}
 .theme-default a.nivo-nextNav {
-	background-position:-42px 0;
-	right:15px;
+	background-position: -42px 0;
+	right: 15px;
 }
 .theme-default a.nivo-prevNav {
-	left:15px;
+	left: 15px;
 }
 
 .theme-default .nivo-caption {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Tahoma;
 }
 .theme-default .nivo-caption a {
-    color:#fff;
-    border-bottom:1px dotted #fff;
+    color: #fff;
+    border-bottom: 1px dotted #fff;
 }
 .theme-default .nivo-caption a:hover {
-    color:#fff;
+    color: #fff;
 }
 
 .theme-default .nivo-controlNav.nivo-thumbs-enabled {
