--- a/v1/style.css
+++ b/v1/style.css
@@ -6,13 +6,14 @@ Author: inspire2designs
 Author URI: http://www.inspire2designs.com/
 Version: 1.0
 */
+@import "css/normalize.min.css";
 @import "css/fontface.css";
 
 /* LAYOUT */
 .box-layout {padding: 0}
 .box-layout .wrapper {background: #eee;margin: 10px auto;padding: 0 10px;width: 960px}
-.grid {margin: 0 auto;width: 960px}
-.container {clear: both;overflow: hidden;padding-bottom: 20px}
+.grid {margin: 0 auto;width: 940px}
+.container {clear: both;overflow: hidden;padding: 0 0 20px}
 
 /* GENERAL */
 body {background: #fff;-webkit-font-smoothing: antialiased}
@@ -23,38 +24,26 @@ h1, h2, h3, h4, h5, h6 {
     color: #00b6e0;
     font-family: Tahoma;
 }
-.clear {
-    clear: both;
-    display: block;
-    height: 0;
-    overflow: hidden;
-    visibility: hidden;
-    width: 0;
-}
 
 /* TOPBAR */
-.topbar {background: #eee;border-top: 3px solid #ddd;overflow: hidden;padding: 5px 0}
-.topbarnav-left {float: left}
-.topbarnav-left li {display: inline;margin-right: 10px}
-.topbarnav-left li a {color: #00b6e0;font: 13px Tahoma}
-.topbarnav-right {float: right}
-.topbarnav-right li {display: inline;margin-left: 10px}
-.topbarnav-right li a img {height: 13px;width: 13px}
+.topbar {background: #eee;border-top: 3px solid #ddd;overflow: hidden;padding: 5px 0;text-align: center}
+.topbarnav li {display: inline;margin: 0 10px}
+.topbarnav li a {color: #00b6e0}
+.topbarnav li a img {height: 13px;width: 13px}
+.topbarnav.left li {margin: 0 10px 0 0}
+.topbarnav.right li {margin: 0 0 0 10px}
 
 /* HEADER */
-header {background: #ddd;height: 200px;margin-bottom: 20px;padding-top: 20px}
+.header {background: #ddd;height: 200px;padding-top: 20px}
 .logo {background: url(images/img.png) repeat;float: left;margin: 10px 0 30px;width: 200px}
 .logo a {display: block;height: 100px;width: 200px;text-indent: -9999px}
 .headinfo {float: right;margin-top: 25px}
 .headinfo h4 {text-align: right}
 .headinfo img {height: 60px;width: 468px}
 
-.featured {background: url(images/featured-bg.png) no-repeat bottom center;float: left;height: 186px;width: 940px}
-.featured img {border-radius: 5px}
-
 /* NAVIGATION */
 .mainnav-wrapper {background: #00b6e0;height: 40px}
-.mainnav li a {color: #333;font: bold 13px/40px Tahoma;padding: 0 30px}
+.mainnav li a {color: #333;font: bold 13px/40px Tahoma;padding: 0 25px}
 .mainnav li a:hover {color: #fff}
 .mainnav .active a, .mainnav .active a:hover {background: #333;color: #fff}
 
@@ -71,9 +60,13 @@ header {background: #ddd;height: 200px;margin-bottom: 20px;padding-top: 20px}
 }
 .sf-menu li li a:hover {background: none;color: #bbb}
 
-.footnav {border-top: 1px solid #aaa;margin-top: 20px;padding-top: 20px;text-align: center} 
-.footnav li {display: inline;list-style: none;margin: 0 15px}
-.footnav li a {color: #00b6e0;font: 13px Tahoma}
+/* SLIDER */
+.slider {background: #ccc;padding: 15px 0}
+.slider img {height: 300px;width: 960px}
+
+/* CAROUSEL */
+.carousel {margin: 20px 0;padding: 0 20px;position: relative}
+.carousel li img {height: 120px;width: 260px}
 
 /* ASIDE */
 aside {float: left;width: 250px}
@@ -124,10 +117,84 @@ aside {float: left;width: 250px}
 .bottomsidebanner img {margin-bottom: 5px;border-radius: 5px}
 
 /* CONTENT */
-.content {float: right;width: 660px}
+.content {}
+.home .content.left {width: 50%}
+.home .content.right {width: 50%}
 
-.slider {background: url(images/slide-bg.png) no-repeat;margin-bottom: 15px;height: 290px}
-.slider img {border-radius: 5px}
+.entry .meta {
+    color: #999999;
+    font-size: 11px;
+    line-height: 16px;
+    padding: 2px 0;
+}
+.entry .meta a {
+    white-space: nowrap;
+}
+.entry .meta a {
+    font-size: 11px;
+    padding: 0 2px;
+    text-transform: uppercase;
+}
+.ct-post article .ct-subline {
+    float: left;
+    font-size: 13px;
+    width: 100%;
+}
+.ct-post article .ct-subline a {
+    font-size: 12px;
+}
+.ct-small-text {
+    color: #888888;
+}
+.ct-latest h2 {
+    font-size: 24px;
+    line-height: 30px;
+    padding: 0;
+}
+.entry .thumb {
+    float: left;
+    margin: 0 10px 10px 0;
+}
+.entry .thumb a {
+    background: url("../images/thumb_small.png") no-repeat scroll center center / 100% auto #237DAC;
+    display: block;
+    height: 105px;
+    width: 105px;
+}
+.entry .thumb a img {
+    display: block;
+    height: 105px;
+    width: 105px;
+}
+.entry p {
+    font-size: 14px;
+    line-height: 20px;
+}
+.ct-featured .ct-feat-excerpt {
+    line-height: 22px;
+    margin: 0;
+}
+.entry p a:hover {
+    color: #000000;
+}
+.ct-latest .ct-subline {
+    line-height: 20px;
+}
+.entry .meta time {
+    margin: 0 2px;
+    padding: 0;
+    white-space: nowrap;
+}
+.entry .meta time:before, .blog .meta time:after {
+    color: #DDDDDD;
+    content: " • ";
+    font-style: normal;
+}
+
+.blog .entry {
+    background: url("../images/line.png") repeat-x scroll left bottom rgba(0, 0, 0, 0);
+    padding: 22px 0;
+}
 
 .shadowbg {background: url(images/shadow-bg.jpg) no-repeat center 33px}
 .title {overflow: hidden;margin-bottom: 20px}
@@ -157,9 +224,6 @@ aside {float: left;width: 250px}
 .promotion .entry h3 a {color: #006838;font-size: 30px;line-height: 30px}
 .promotion .entry h3 a:hover {color: #229a3d;text-decoration: underline}
 .promotion .entry p {clear: both}
-
-.carousel {height: 80px;margin-bottom: 20px;padding: 0 15px;position: relative}
-.carousel img {border-radius: 5px}
 
 .newsannouncement {overflow: hidden}
 .news {float: left;overflow: hidden;margin: 0 5px;width: 320px}
@@ -308,10 +372,19 @@ aside {float: left;width: 250px}
 .btn:hover {background: #fff;text-decoration: none}
 
 /* FOOTER */
-footer {background: #ccc;padding: 30px 0 20px;overflow: hidden}
-.columns {float: left;padding: 0 10px;width: 33.333%}
+.footer {background: #ddd;padding: 30px 0 20px;overflow: hidden}
+.columns {float: left;padding-right: 20px;width: 33.333%}
 .columns h3 {margin-bottom: 10px}
-.columns p {color: #fff;font: 13px Tahoma;margin-bottom: 10px}
+.columns p {margin-bottom: 10px}
+
+.footnav-wrapper {background: #ccc;border-top: 3px solid #bbb;overflow: hidden}
+.footinfo p {margin-top: 10px}
+.footnav {padding: 10px 0;text-align: center} 
+.footnav li {display: inline;margin: 0 10px}
+.footnav li a {color: #00b6e0}
+.footnav li a img {height: 13px;width: 13px}
+.footnav.left li {margin: 0 10px 0 0}
+.footnav.right li {margin: 0 0 0 10px}
 
 /* TO TOP */
 .totop {
@@ -357,6 +430,19 @@ footer {background: #ccc;padding: 30px 0 20px;overflow: hidden}
     padding: 7px 15px;
 }
 
+/* MISC */
+.left {float: left}
+.right {float: right}
+.clear {
+    clear: both;
+    display: block;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden;
+    width: 0;
+}
+.bd {border: 1px solid #facedd}
+
 /* IE HACK */
 .lt-ie8 .category .entry .more {width: 35px}
 .lt-ie9 .pagination a, .pagination span {height: 30px}
@@ -367,6 +453,6 @@ footer {background: #ccc;padding: 30px 0 20px;overflow: hidden}
 .lt-ie9 .toplink .social {margin-top: 8px}
 
 /* MEDIA QUERY */
-@media (max-width: 970px) {
-    body {width: 970px}
+@media (max-width: 990px) {
+    body {width: 990px}
 }
