Install Bootstrap framework and jQuery

--- a/pug/master/base.pug
+++ b/pug/master/base.pug
@@ -25,7 +25,7 @@ html(lang="th")
 
 
 		//-//- Main Style
-		//- link(rel="stylesheet", href="assets/style/stylesheet.css")
+		link(rel="stylesheet", href="assets/style/stylesheet.css")
 
 
 		//-//- Custom Style
@@ -44,7 +44,7 @@ html(lang="th")
 
 
 		//-//- Header Script
-		include ../script/header-script.js
+		//- include ../script/header-script.js
 
 
 		//-//- Custom Header Script
