--- a/pug/master/bodyclass.pug
+++ b/pug/master/bodyclass.pug
@@ -7,6 +7,6 @@ else
 
 
 //-//- After Body Script
-include ../script/afterbody-script.js
+//- include ../script/afterbody-script.js
 
 <a class="skip-link u--screen-reader-text" href="#content" title="ข้ามไปยังส่วนของข้อมูล">ข้ามไปยังส่วนของข้อมูล</a>
