--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -7,7 +7,7 @@
  *
  *
  * VENDORS // framework ที่ใช้
- *
+ * Bootstrap ............................................ framework v4.3.1
  *
  * SETTINGS // variable กับ setting ต่างๆ
  *
@@ -41,7 +41,7 @@
 
 
 // VENDORS
-// @import "0-vendors/"; 
+@import "0-vendors/bootstrap/bootstrap"; 
 
 
 
